@@ -14,39 +14,41 @@
 ; Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA 
 
 (export "lib/trace")
+(import "lib/format")
 
 (define (traceback error) 
-  (write "ERROR: ")
-  (write (symbol->string (error-key error)))
-  (define info (error-info error))
-  (define context (error-context error))
-  (when (and (not (null? info))
-             (string? (car info)))
-    (write " -- " )
-    (write (car info))
-    (set! info (cdr info)))
-  (newline)
-  (when (not (null? info))
-    (write "INFO: ")
-    (for-each (lambda (item)
-               (write " ")
-               (show item))
-      info)
-    (newline))
-  (write "TRACE: ")
-  (define first #t)
-  (for-each (lambda (frame)
-              (if first (set! first #f)
-                        (write "       "))
-              (write "(")
-              (show (function-name (car frame)))
-              (for-each (lambda (arg)
-                          (write " ")
-                          (show arg))
-                        (cdr frame))
-              (write ")")
-              (newline))
-              context))
+  (buffer-output 
+    (write "ERROR: ")
+    (write (symbol->string (error-key error)))
+    (define info (error-info error))
+    (define context (error-context error))
+    (when (and (not (null? info))
+               (string? (car info)))
+      (write " -- " )
+      (write (car info))
+      (set! info (cdr info)))
+    (newline)
+    (when (not (null? info))
+      (write "INFO: ")
+      (for-each (lambda (item)
+                  (write " ")
+                  (show item))
+                info)
+      (newline))
+    (write "TRACE: ")
+    (define first #t)
+    (for-each (lambda (frame)
+                (if first (set! first #f)
+                  (write "       "))
+                (write "(")
+                (show (function-name (car frame)))
+                (for-each (lambda (arg)
+                            (write " ")
+                            (show arg))
+                          (cdr frame))
+                (write ")")
+                (newline))
+              context)))
 
 (define (traceback error (<port> port))
   (with-output-port port (traceback error)))
